--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase-admin": "^13.4.0",
     "geist": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "mercadopago": "^2.9.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
